--- a/oas-env/oas/templates/register.html
+++ b/oas-env/oas/templates/register.html
@@ -19,6 +19,12 @@
       {% csrf_token %}
       <h2 class="text-center mb-4" style="color: #333;">Create an Account</h2>
       
+      {% if error %}
+        <div class="alert alert-danger">
+          {{ error }}
+        </div>
+      {% endif %}
+      
       <div class="mb-3">
         <label for="username" class="form-label">Username</label>
         <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username" style="border-radius: 10px; border: 1px solid #ddd;">
@@ -44,7 +50,6 @@
       </div>
     </form>
   </div>
-  
   <div class="custom-shape-divider-bottom-1678428448">
     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
       <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
