--- a/oas-env/oas/static/CSS/register.css
+++ b/oas-env/oas/static/CSS/register.css
@@ -53,6 +53,7 @@ section {
     padding: 30px;
     max-width: 500px;
     width: 100%;
+    transform: translate(10px, -45px);
 }
 
 /* Input fields styling */
