--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -90,7 +90,7 @@
         <h1>Top Calss Product Price</h1>
       <p>Voluptate aut blanditiis accusantium offic expedita dolorem inventore</p>  
       </button>
-      <button type="button" class="btn btn-secondary btn-lg"><img src="{% static 'img/bandage.png' %}" alt="">
+      <button type="button" class="btn btn-secondary btn-lg"><img src="{% static 'img/bandage.jpg' %}" alt="">
         <h1>Support Multiple Currency</h1>
       <p>Voluptate aut blanditiis accusantium offic expedita dolorem inventore</p>  
       </button>
