--- a/oas-env/oas/templates/browse_product.html
+++ b/oas-env/oas/templates/browse_product.html
@@ -8,7 +8,7 @@
 
 
 <body>
-    <div class="bid-cards">
+    <div class="browse-cards">
         <div class="container">
             <div class="row">
                 {% for product in products %}
