--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -349,6 +349,7 @@ body{
   margin-top: 30px;
   background-color: black;
   color: white;
+  background-color: linear-gradient(to right , blue , green);
   
 
 }
@@ -445,9 +446,8 @@ body{
 .count {
   font-size: 1.5rem;
   color: white;
-  background: black;
+  background: #262727;
   padding: 10px;
-  border-radius: 5px;
 }
 .btn-success {
   z-index: 2;
