--- a/oas-env/oas/templates/browse_product.html
+++ b/oas-env/oas/templates/browse_product.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row">
                 {% for product in products %}
-                    {% if product.category == '1st-Auction' %}
+                    {% if product.category == 'browse-card' %}
                     
                     
                   <script>
@@ -85,7 +85,7 @@
   
   
           <!-- Search bar container -->
-  <div class="search-container">
+  <!-- <div class="search-container">
     <form class="search-form" action="" >
         <input type="text" name="q" placeholder="Search..." class="form-control" autocomplete="off">
         <button type="submit" class="btn btn-primary">Search</button>
@@ -116,7 +116,7 @@
                     
                     <!-- Add more products as needed -->
                 </ul>
-            </div>
+            </div> -->
         </div>
           </div>
         </div>
