--- a/oas-env/oas/templates/browse_product.html
+++ b/oas-env/oas/templates/browse_product.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row">
                 {% for product in products %}
-                    {% if product.category == '1st-Auction' %}
+                    {% if product.category == 'browse-card' %}
                     
                     
                   <script>
