--- a/oas-env/oas/templates/browse_product.html
+++ b/oas-env/oas/templates/browse_product.html
@@ -85,7 +85,7 @@
   
   
           <!-- Search bar container -->
-  <div class="search-container">
+  <!--<div class="search-container">
     <form class="search-form" action="" >
         <input type="text" name="q" placeholder="Search..." class="form-control" autocomplete="off">
         <button type="submit" class="btn btn-primary">Search</button>
@@ -114,8 +114,8 @@
                     <li class="product-item"> <a href="">Watches</a></li>
                     
                     
-                    <!-- Add more products as needed -->
-                </ul>
+                     Add more products as needed -->
+                <!--</ul>
             </div>
         </div>
           </div>
@@ -159,8 +159,7 @@
   
       </nav>
   
-    </div>
-  
+    </div>-->
   
   
   
