--- a/oas-env/oas/templates/browse_product.html
+++ b/oas-env/oas/templates/browse_product.html
@@ -66,7 +66,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <img src="media/{{product.image}}" class="card-img-top" alt="..."/>
+                                <img src="{{ product.image.url }}" class="card-img-top" alt="..."/>
                                 <div class="card-body">
                                     <h5 class="card-title">{{ product.title }}</h5>
                                     <p class="card-text"><b>{{ product.description }}</b></p>
