--- a/oas-env/oas/templates/browse_product.html
+++ b/oas-env/oas/templates/browse_product.html
@@ -83,6 +83,46 @@
     
   
   
+
+
+
+
+
+
+    <nav aria-label="Page navigation example" >
+        <ul class="pagination">
+  
+  
+          {% if products.has_previous %}
+          <li class="page-item"><a class="page-link" href="/?page={{ products.previous_page_number }}"><i class="bi bi-arrow-90deg-left"></i></a></li>
+          {% endif %}
+  
+  
+  
+          {% for c in totalpages %}
+          <li class="page-item"><a class="page-link {% if products.number == c %} active {% endif %} " href="/?page={{c}}">{{c}}</a></li>
+          {% endfor %}
+          
+          {% if products.has_next %}
+          <li class="page-item"><a class="page-link" href="/?page={{products.next_page_number}}"><i class="bi bi-arrow-90deg-right"></i></a></li>
+          {% endif %}
+        </ul>
+  
+  
+  
+  
+    </nav>
+
+
+
+
+
+
+
+
+
+
+
   
           <!-- Search bar container -->
   <!--<div class="search-container">
