--- a/oas-env/oas/templates/browse_product.html
+++ b/oas-env/oas/templates/browse_product.html
@@ -89,32 +89,47 @@
 
 
 
-    <nav aria-label="Page navigation example" >
+    <nav aria-label="Page navigation example">
         <ul class="pagination">
-  
-  
-          {% if products.has_previous %}
-          <li class="page-item"><a class="page-link" href="/?page={{ products.previous_page_number }}"><i class="bi bi-arrow-90deg-left"></i></a></li>
-          {% endif %}
-  
-  
-  
-          {% for c in totalpages %}
-          <li class="page-item"><a class="page-link {% if products.number == c %} active {% endif %} " href="/?page={{c}}">{{c}}</a></li>
-          {% endfor %}
-          
-          {% if products.has_next %}
-          <li class="page-item"><a class="page-link" href="/?page={{products.next_page_number}}"><i class="bi bi-arrow-90deg-right"></i></a></li>
-          {% endif %}
+            <!-- Previous Page Link -->
+            {% if products.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ products.previous_page_number }}">
+                        <i class="bi bi-arrow-90deg-left"></i>
+                    </a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link">
+                        <i class="bi bi-arrow-90deg-left"></i>
+                    </a>
+                </li>
+            {% endif %}
+      
+            <!-- Page Number Links -->
+            {% for c in totalPages %}
+                <li class="page-item {% if products.number == c %} active {% endif %}">
+                    <a class="page-link" href="?page={{ c }}">{{ c }}</a>
+                </li>
+            {% endfor %}
+      
+            <!-- Next Page Link -->
+            {% if products.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="{% url 'browse_page' %}?page={{ products.previous_page_number }}">
+
+                        <i class="bi bi-arrow-90deg-right"></i>
+                    </a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link">
+                        <i class="bi bi-arrow-90deg-right"></i>
+                    </a>
+                </li>
+            {% endif %}
         </ul>
-  
-  
-  
-  
     </nav>
-
-
-
 
 
 
