--- a/oas-env/oas/templates/browse_product.html
+++ b/oas-env/oas/templates/browse_product.html
@@ -109,7 +109,7 @@
             <!-- Page Number Links -->
             {% for c in totalPages %}
                 <li class="page-item {% if products.number == c %} active {% endif %}">
-                    <a class="page-link" href="?page={{ c }}">{{ c }}</a>
+                    <a class="page-link" href="{% url 'browse_page' %}?page={{ products.previous_page_number }}">
                 </li>
             {% endfor %}
       
@@ -123,7 +123,7 @@
                 </li>
             {% else %}
                 <li class="page-item disabled">
-                    <a class="page-link">
+                    <a class="page-link" href="{% url 'browse_page' %}?page={{ products.previous_page_number }}">
                         <i class="bi bi-arrow-90deg-right"></i>
                     </a>
                 </li>
