--- a/oas-env/oas/templates/browse_product.html
+++ b/oas-env/oas/templates/browse_product.html
@@ -89,49 +89,34 @@
 
 
 
-    <nav aria-label="Page navigation example">
-        <ul class="pagination">
-            <!-- Previous Page Link -->
-            {% if products.has_previous %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ products.previous_page_number }}">
-                        <i class="bi bi-arrow-90deg-left"></i>
-                    </a>
-                </li>
-            {% else %}
-                <li class="page-item disabled">
-                    <a class="page-link">
-                        <i class="bi bi-arrow-90deg-left"></i>
-                    </a>
-                </li>
-            {% endif %}
-      
-            <!-- Page Number Links -->
-            {% for c in totalPages %}
-                <li class="page-item {% if products.number == c %} active {% endif %}">
-                    <a class="page-link" href="{% url 'browse_page' %}?page={{ products.previous_page_number }}">
-                </li>
-            {% endfor %}
-      
-            <!-- Next Page Link -->
-            {% if products.has_next %}
-                <li class="page-item">
-                    <a class="page-link" href="{% url 'browse_page' %}?page={{ products.previous_page_number }}">
-
-                        <i class="bi bi-arrow-90deg-right"></i>
-                    </a>
-                </li>
-            {% else %}
-                <li class="page-item disabled">
-                    <a class="page-link" href="{% url 'browse_page' %}?page={{ products.previous_page_number }}">
-                        <i class="bi bi-arrow-90deg-right"></i>
-                    </a>
-                </li>
-            {% endif %}
-        </ul>
-    </nav>
-
-
+<!-- pagination links -->
+<nav aria-label="Page navigation">
+    <ul class="pagination">
+      {% if page_obj.has_previous %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+        </li>
+      {% endif %}
+  
+      {% for page_number in totalPages %}
+        {% if page_number== page_obj.number %}
+          <li class="page-item active">
+            <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+          </li>
+        {% else %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+          </li>
+        {% endif %}
+      {% endfor %}
+  
+      {% if page_obj.has_next %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+        </li>
+      {% endif %}
+    </ul>
+  </nav>
 
 
 
