--- a/oas-env/oas/templates/browse_product.html
+++ b/oas-env/oas/templates/browse_product.html
@@ -92,31 +92,25 @@
 <!-- pagination links -->
 <nav aria-label="Page navigation">
     <ul class="pagination">
-      {% if page_obj.has_previous %}
-        <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
-        </li>
-      {% endif %}
-  
-      {% for page_number in totalPages %}
-        {% if page_number == page_obj.number %}
-          <li class="page-item active">
-            <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
-          </li>
-        {% else %}
-          <li class="page-item">
-            <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
-          </li>
+        {% if page_obj.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+            </li>
         {% endif %}
-      {% endfor %}
-  
-      {% if page_obj.has_next %}
-        <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
-        </li>
-      {% endif %}
+
+        {% for page_number in totalPages %}
+            <li class="page-item {% if page_number == page_obj.number %} active {% endif %}">
+                <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+            </li>
+        {% endfor %}
+
+        {% if page_obj.has_next %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+            </li>
+        {% endif %}
     </ul>
-  </nav>
+</nav>
 
 
 
