--- a/oas-env/oas/templates/browse_product.html
+++ b/oas-env/oas/templates/browse_product.html
@@ -119,7 +119,7 @@
 
   
           <!-- Search bar container -->
-  <!--<div class="search-container">
+  <div class="search-container">
     <form class="search-form" action="" >
         <input type="text" name="q" placeholder="Search..." class="form-control" autocomplete="off">
         <button type="submit" class="btn btn-primary">Search</button>
@@ -128,10 +128,11 @@
   
   
   
-  
+
   
   
   <div class="category-card">
+  <!-- <div class="category-card">
           
             <div class="category-content">
                 <h3 class="category-title">Categories</h3>
@@ -149,6 +150,7 @@
                     
                     
                      Add more products as needed -->
+                </ul>
                 <!--</ul>
             </div>
         </div>
@@ -156,6 +158,8 @@
         </div>
       </div>
   
+   -->
+
   
   
   
