--- a/oas-env/oas/templates/browse_product.html
+++ b/oas-env/oas/templates/browse_product.html
@@ -120,7 +120,7 @@
   
           <!-- Search bar container -->
   <div class="search-container">
-    <form class="search-form" action="" >
+    <form class="search-form" action="{% url 'product_list' %}" >
         <input type="text" name="q" placeholder="Search..." class="form-control" autocomplete="off">
         <button type="submit" class="btn btn-primary">Search</button>
     </form>
