--- a/oas-env/oas/templates/product_list.html
+++ b/oas-env/oas/templates/product_list.html
@@ -2,7 +2,7 @@
 
 
 
-
+{% load static %}
 {% include 'header.html' %}
 <h1>Product List</h1>
 <form method="GET" action="{% url 'product_list' %}">
