--- a/oas-env/oas/templates/product_detail.html
+++ b/oas-env/oas/templates/product_detail.html
@@ -39,7 +39,6 @@
 
       
       <div class="card-details">
-        
         <div class="container">
             <div class="product-detail">
                 <div class="product-image">
@@ -49,19 +48,27 @@
                     <h1 style="color: white;">{{ product.title }}</h1>
                     <p style="color: white;">{{ product.description }}</p>
     
-                    <!-- Input form for name, email, and price -->
+                    {% if messages %}
+                        <div class="messages">
+                            {% for message in messages %}
+                                <div class="alert alert-success">
+                                    {{ message }}
+                                </div>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+                
                     <form method="POST" action="{% url 'save_price' product.id %}" class="bid-form">
                         {% csrf_token %}
-                        <label for="name">Enter your Name:</label>
+                        <label for="name" style="color: white;">Enter your Name:</label>
                         <input type="text" id="name" name="name" required placeholder="Your Name">
     
-                        <label for="email">Enter your Email:</label>
+                        <label for="email" style="color: white;">Enter your Email:</label>
                         <input type="email" id="email" name="email" required placeholder="Your Email">
     
-                        <label for="price">Enter your Bid:</label>
+                        <label for="price" style="color: white;">Enter your Bid:</label>
                         <input type="number" id="price" name="price" required placeholder="Your Bid">
     
-                        <!-- Submit button -->
                         <button type="submit" class="btn-submit">Submit Bid</button>
                     </form>
                 </div>
