--- a/oas-env/oas/static/CSS/register.css
+++ b/oas-env/oas/static/CSS/register.css
@@ -55,7 +55,14 @@ section {
     width: 100%;
     transform: translate(10px, -45px);
 }
+.card .p-5{
+    width: 100%; 
+    max-width: 500px; 
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 15px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
 
+}
 /* Input fields styling */
 .form-control {
     border-radius: 10px;
