--- a/oas-env/oas/static/CSS/contact.css
+++ b/oas-env/oas/static/CSS/contact.css
@@ -39,7 +39,7 @@ input:valid ~ label,
 textarea:valid ~ label {
     font-size: 0.75em;
     color: #999;
-    top: -10px; /* Adjusted to better position label */
+    top: -20px; /* Adjusted to better position label */
     left: 10px; /* Adjusted to better position label */
     transition: all 0.225s ease;
 }
@@ -52,15 +52,13 @@ textarea:valid ~ label {
 }
 
 .styled-input label {
-    color: #999;
-    padding: 1.3rem 0.75rem;
     position: absolute;
-    top: 1rem;
-    left: 1rem;
-    transition: all 0.25s ease;
+    top: 10px;
+    left: 10px;
+    font-size: 16px;
+    color: #fff;
     pointer-events: none;
-    display: inline-block;
-    font-size: 1rem;
+    transition: all 0.3s ease;
 }
 
 .styled-input input,
@@ -117,13 +115,13 @@ textarea {
     }
 }
 
-.map-content{
+.map-content {
     padding-top: 220px;
     min-height: 100vh;
     padding-left: 15px;
     padding-right: 15px;
-
 }
+
 .d-flex {
     display: flex;
     flex-wrap: wrap;
