--- a/oas-env/oas/templates/contact.html
+++ b/oas-env/oas/templates/contact.html
@@ -20,7 +20,7 @@
                     <h1>Contact Us</h1>
                 </div>
                 <div class="row">
-                    <h4 style="text-align:center">We'd love to hear from you!</h4>
+                    <h4 style="text-align:center" style="color: lightgray;">We'd love to hear from you!</h4>
                 </div>
                 <div class="row input-container">
                     <div class="col-xs-12">
