--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -360,30 +360,31 @@
     <br> 
     We want to be a part of your smile, success, and future growth.
   </p>
-  
+
   <div class="review-section-inner">
     {% for product in products %} 
       {% if product.category == 'client-review' %}
         <div class="card">
-          <img src="media/{{product.image}}" alt="Johan Martin">
-          <p>{{product.description}}</p> <!-- This will now show the comments -->
-          <h3>{{product.title}}</h3> <!-- This will now show the name -->
+          <img src="{% static 'media/' %}{{ product.image }}" alt="{{ product.title }}">
+          <p>{{ product.description }}</p>
+          <h3>{{ product.title }}</h3>
         </div>
       {% endif %} 
     {% endfor %}
   </div>
-  
+
   <!-- Review form section -->
-  <div class="review-form">
+  <div class="review-form-container">
     <h3>Submit Your Review</h3>
     <form method="POST" action="">
       {% csrf_token %}
-      {{ form.as_p }} <!-- This will render the form fields -->
+      {{ form.as_p }} <!-- Render form fields as paragraphs -->
       <input type="hidden" name="product_id" value="{{ product.id }}">
       <button type="submit">Submit Review</button>
     </form>
   </div>
 </div>
+
 
 
 
